@@ -4,7 +4,7 @@ Upstream-Contact: Rui Nuno Capela <rncbc@rncbc.org>
 Source: https://qmidictl.sourceforge.io
 
 Files: *
-Copyright: 2010-2024 Rui Nuno Capela <rncbc@rncbc.org>
+Copyright: 2010-2025 Rui Nuno Capela <rncbc@rncbc.org>
            2010      Muhammad Bashir Al-Noimi
            2023-2023 Nicolas Boulenguez <nicolas@debian.org>
 License: GPL-2+
@@ -40,7 +40,7 @@ License: LGPL-2.1
  License can be found in /usr/share/common-licenses/LGPL-2.1.
 
 Files: src/appdata/*
-Copyright: 2010-2024 Rui Nuno Capela <rncbc@rncbc.org>
+Copyright: 2010-2025 Rui Nuno Capela <rncbc@rncbc.org>
 License: FSFAP
  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
