@@ -6,6 +6,10 @@ ChangeLog
 
 GIT HEAD
 
+- Fixed command line parsing (QCommandLineParser/Option) to not
+  exiting the application with a segfault when showing help and
+  version information.
+
 - Prepping up next development cycle (Qt >= 6.8)
 
 
